; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/armada/extr_armada_510.c_armada510_crtc_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/armada/extr_armada_510.c_armada510_crtc_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.armada_crtc = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.armada_crtc*)* @armada510_crtc_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @armada510_crtc_disable(%struct.armada_crtc* %0) #0 {
  %2 = alloca %struct.armada_crtc*, align 8
  store %struct.armada_crtc* %0, %struct.armada_crtc** %2, align 8
  %3 = load %struct.armada_crtc*, %struct.armada_crtc** %2, align 8
  %4 = getelementptr inbounds %struct.armada_crtc, %struct.armada_crtc* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load %struct.armada_crtc*, %struct.armada_crtc** %2, align 8
  %9 = getelementptr inbounds %struct.armada_crtc, %struct.armada_crtc* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @clk_disable_unprepare(i32* %10)
  %12 = load %struct.armada_crtc*, %struct.armada_crtc** %2, align 8
  %13 = getelementptr inbounds %struct.armada_crtc, %struct.armada_crtc* %12, i32 0, i32 0
  store i32* null, i32** %13, align 8
  br label %14

14:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @clk_disable_unprepare(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
